# TP2U

./: README.md
Hardware/: README.md
Hardware/Equicore_RTL/DCE_TOP/: DCE_CDC.v  DCE_TOP.v
Hardware/Equicore_RTL/LDCE/BRAM_TILE/: BRAM_CTRL.v  BRAM_SIM.v  BRAM_TILE.v
Hardware/Equicore_RTL/LDCE/PACKING/: Correction.v  DSP48_Macro.v  DSP_TOP_SIM.v  DSP_Top.v  Packing.v
Hardware/Equicore_RTL/LDCE/PE_CH/: LPE.v  LPE_CTRL.v  OP_CTRL.v  OP_CTRL_FSM.v  PE_Channel.v  RPE.v  RPE_CTRL.v
Hardware/Equicore_RTL/LDCE/TOP/: DCE_PE.v  LDCE.v  LDCE_CTRL.v
Hardware/Equicore_RTL/LOW/: CG_parse.v  Channel_rc.v
Hardware/Equicore_RTL/MYIP/: async_fifo_32to16_lut.v  async_fifo_syncread_lut.v  dist_mem_1r1w.v
Hardware/Equicore_RTL/RDCE/: RDCE.v  RDCE_CTRL.v  RDCE_PE.v  SUM4.v  W_CH.v  W_CH_CTRL.v
Hardware/Equicore_RTL/TOP/: EquiCore.v
Software/: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
Software/examples/: builtin_problem_models.json  pytorch_demo.py  pytorch_e3nn_template.py  sample_generic_mimo.json
Software/src/mimo_tvm_flow/: __init__.py  adapters.py  cli.py  model_catalog.py  packing.py  pytorch_frontend.py  siso.py  spec.py  tvm_lowering.py  visualize.py
Software/src/mimo_tvm_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
